trybuild-qcell/src/compiletest/lcell_generativity-13.stderr
error[E0277]: `Rc<()>` cannot be sent between threads safely
 --> src/compiletest/lcell_generativity-13.rs:8:5
  |
8 |     is_sync::<LCell<'_, Rc<()>>>();  // Compile fail
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Rc<()>` cannot be sent between threads safely
  |
  = help: the trait `Send` is not implemented for `Rc<()>`
  = note: required because of the requirements on the impl of `Sync` for `LCell<'_, Rc<()>>`
note: required by a bound in `is_sync`
 --> src/compiletest/lcell_generativity-13.rs:7:19
  |
7 |     fn is_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `is_sync`

error[E0277]: `Rc<()>` cannot be shared between threads safely
 --> src/compiletest/lcell_generativity-13.rs:8:5
  |
8 |     is_sync::<LCell<'_, Rc<()>>>();  // Compile fail
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Rc<()>` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `Rc<()>`
  = note: required because of the requirements on the impl of `Sync` for `LCell<'_, Rc<()>>`
note: required by a bound in `is_sync`
 --> src/compiletest/lcell_generativity-13.rs:7:19
  |
7 |     fn is_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `is_sync`
